--- a/src/components/styleModal.scss
+++ b/src/components/styleModal.scss
@@ -56,17 +56,20 @@
     border-radius: 24px;
     border: none;
     font-weight: 500;
-    font-size: 18px; // Ajuste o tamanho da fonte
+    font-size: 18px;
     background-color: transparent;
-    width: auto; // Largura automática (pode ser ajustada)
-    min-width: 100px; // Largura mínima do botão
+    width: 100px; // Largura fixa ou ajustável
+    min-width: 50px; // Largura mínima do botão
     cursor: pointer;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     position: relative;
-
+    overflow: hidden; // Garante que a animação não ultrapasse os limites do botão
+  
+  
     div {
+      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
