--- a/src/pages/Home1/style.scss
+++ b/src/pages/Home1/style.scss
@@ -92,24 +92,27 @@ main {
             border-radius: 24px;
             border: none;
             font-weight: 500;
-            font-size: 18px; // Ajuste o tamanho da fonte
+            font-size: 15px;
             background-color: transparent;
-            width: auto; // Largura automática (pode ser ajustada)
-            min-width: 100px; // Largura mínima do botão
+            width: 100px; // Largura fixa ou ajustável
+            min-width: 50px; // Largura mínima do botão
             cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
             position: relative;
-
+            overflow: hidden; // Garante que a animação não ultrapasse os limites do botão
+          
+          
             div {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 8px;                
-                padding: 8px 10px; 
-                border-radius: 14px;
-                border: none;
+              width: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              gap: 8px;
+              padding: 8px 10px;
+              border-radius: 14px;
+              border: none;
             }
 
             .btn-face-white {
