--- a/src/components/styleArrowleft.scss
+++ b/src/components/styleArrowleft.scss
@@ -39,8 +39,8 @@
   }
 
   .btn-face-white {
-    color: rgb(57, 56, 56);
-    background-color: #fff;
+    color: #fff;
+    background-color: #8B8AE1;
     z-index: 998;
   }
 
