--- a/src/pages/Home1/style.scss
+++ b/src/pages/Home1/style.scss
@@ -54,7 +54,6 @@ main {
                 display: flex;
                 align-items: flex-start;
                 flex-direction: column;
-                // gap: 2px;
 
                 .logo-text-bold {
                     font-weight: 800;
@@ -72,14 +71,14 @@ main {
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 45px;
+            gap: 95px;
 
             a {
                 font-weight: 600;
                 font-size: 18px;
                 cursor: pointer;
-                text-decoration: none; // Remove o sublinhado padrão dos links
-                color: inherit; // Mantém a cor padrão do texto
+                text-decoration: none;
+                color: inherit;
 
                 &:hover {
                     color: $color-primary;
@@ -94,25 +93,24 @@ main {
             font-weight: 500;
             font-size: 15px;
             background-color: transparent;
-            width: 100px; // Largura fixa ou ajustável
-            min-width: 50px; // Largura mínima do botão
+            width: 100px;
+            min-width: 50px;
             cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
             position: relative;
-            overflow: hidden; // Garante que a animação não ultrapasse os limites do botão
-          
-          
+            overflow: hidden;
+
             div {
-              width: 100%;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              gap: 8px;
-              padding: 8px 10px;
-              border-radius: 14px;
-              border: none;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 8px;
+                padding: 8px 10px;
+                border-radius: 14px;
+                border: none;
             }
 
             .btn-face-white {
@@ -129,7 +127,6 @@ main {
             }
 
             &:hover {
-
                 .btn-face-purple {
                     display: flex;
                     animation: appear 300ms linear 150ms forwards;
@@ -137,7 +134,7 @@ main {
             }
         }
     }
-    
+
     .content-container {
         display: flex;
         align-items: center;
@@ -152,17 +149,15 @@ main {
             flex-direction: column;
             align-items: flex-end;
             width: 100%;
-            
+
             h2 {
                 font-size: 62px;
                 font-weight: 800;
-                
-               &:first-of-type {
-                   align-self: flex-start;
-               }
-            }
-            
 
+                &:first-of-type {
+                    align-self: flex-start;
+                }
+            }
         }
 
         .bubble {
@@ -178,17 +173,14 @@ main {
                 font-size: 32px;
                 transform: rotate(30deg);
                 animation: balance 800ms alternate 350ms infinite;
-
-
             }
 
             &.rocket {
                 top: -20%;
-                right:10px;
+                right: 10px;
                 font-size: 40px;
                 width: 70px;
                 height: 65px;
-                
             }
 
             &.target {
@@ -197,7 +189,6 @@ main {
                 font-size: 60px;
                 transform: rotate(30deg);
                 animation: balance 800ms alternate 350ms infinite;
-
             }
 
             &.shop {
@@ -206,5 +197,181 @@ main {
                 font-size: 40px;
             }
         }
+    }
+}
+
+// Media Queries para Responsividade
+@media (max-width: 1023px) {
+    main {
+        .header-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+            margin-bottom: 10px;
+            padding: 16px;
+
+            .logo-container {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                margin-bottom: 17px;
+
+                .logo-text {
+                    .logo-text-bold {
+                        font-size: 28px;
+                    }
+
+                    .logo-text-regular {
+                        font-size: 20px;
+                    }
+                }
+            }
+
+            .menu-options {
+                // gap: 30px;
+
+                a {
+                    font-size: 16px;
+                }
+            }
+
+            button {
+
+                order: 1;
+                // margin-left: auto;
+                border-radius: 24px;
+                border: none;
+                font-weight: 500;
+                font-size: 15px;
+                background-color: transparent;
+                width: 100px;
+                min-width: 50px;
+                cursor: pointer;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                overflow: hidden;
+        
+                div {
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 8px;
+                    padding: 8px 12px;
+                    border-radius: 14px;
+                    border: none;
+                    }
+            }
+        }
+
+        .content-container {
+            padding: 16px;
+
+            .heading-container {
+                h2 {
+                    font-size: 48px;
+                }
+            }
+
+            .bubble {
+                &.fire {
+                    font-size: 24px;
+                }
+
+                &.rocket {
+                    font-size: 32px;
+                }
+
+                &.target {
+                    font-size: 300%;
+                    top: -57px;
+                    left: 50px;
+                }
+
+                &.shop {
+                    font-size: 32px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 750px) {
+    main {
+        .header-container {
+            display: grid;
+            grid-template-columns: auto auto; // Duas colunas
+            grid-template-rows: auto auto;   // Duas linhas
+            justify-content: center;
+            gap: 20px;
+            padding: 10px;
+            margin-bottom: 5%;
+            align-items: center;
+          
+
+          
+            .logo-container {
+              grid-column: 1;
+              grid-row: 1;
+              display: flex;
+              align-items: center;
+              gap: 10px;
+          
+              .logo-text {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+          
+                .logo-text-bold {
+                  font-size: 20px;
+                }
+          
+                .logo-text-regular {
+                  font-size: 14px;
+                }
+              }
+            }
+          
+            button {
+              grid-column: 2;       // Coluna 2
+              grid-row: 1;          // Linha 1 (mesma linha do logo)
+              justify-self: end;    // Alinha à direita
+              border-radius: 24px;
+              border: none;
+              font-weight: 500;
+              font-size: 14px;
+              background-color: transparent;
+              width: 90px;
+              min-width: 50px;
+              cursor: pointer;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: relative;
+              overflow: hidden;
+          
+              div {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 6px;
+                padding: 8px 12px;
+                border-radius: 14px;
+                border: none;
+              }
+            }
+          
+            .menu-options {
+              grid-column: 1 / span 2; // Ocupa ambas colunas
+              grid-row: 2;             // Linha 2
+              display: flex;
+              justify-content: center; // Centraliza horizontalmente
+              gap: 15px;
+            }
+          }
     }
 }
