--- a/src/pages/Home1/style.scss
+++ b/src/pages/Home1/style.scss
@@ -319,6 +319,7 @@ main {
               display: flex;
               align-items: center;
               gap: 10px;
+              margin-right: 40px;
           
               .logo-text {
                 display: flex;
@@ -352,6 +353,7 @@ main {
               align-items: center;
               position: relative;
               overflow: hidden;
+              margin-left: 60px;
           
               div {
                 width: 100%;
