--- a/src/pages/Mobilidade/style.scss
+++ b/src/pages/Mobilidade/style.scss
@@ -19,6 +19,18 @@
     padding-top: 100px;
 }
 
+.content{
+
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: #2e2d4e;
+  max-width: 80%;
+  width: 400px;
+  margin-bottom: 20px;
+}
 
   .btn-voltar {
     border-radius: 24px;
